force-app/main/default/objects/Job_Order__c/fields/Recommendations_Due_By__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Due_By__c</fullName>
    <label>Recommendations Due By</label>
    <type>DateTime</type>
</CustomField>