force-app/main/default/objects/Job_Order__c/fields/Reliable_Car_Access__c.field-meta.xml
<CustomField>
    <fullName>Reliable_Car_Access__c</fullName>
    <label>Reliable Car Access</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>