force-app/main/default/objects/Job_Order__c/fields/Requires_Cash_Handling__c.field-meta.xml
<CustomField>
    <fullName>Requires_Cash_Handling__c</fullName>
    <label>Requires Cash Handling</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>