force-app/main/default/objects/Job_Order__c/fields/Requires_Vaccination__c.field-meta.xml
<CustomField>
    <fullName>Requires_Vaccination__c</fullName>
    <label>Requires Vaccination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>