force-app/main/default/objects/Job_Order__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <formula>Hours__c *  Wage__c * 52</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is auto-calculated by taking the &apos;Wage&apos; x &apos;Hours&apos; x 52. If you have annual salary info but not &apos;Wage&apos;, divide the salary by the &apos;Hours&apos; per week and then divide by 52. Enter than value into &apos;Wage&apos;.</inlineHelpText>
    <label>Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>