force-app/main/default/objects/Job_Order__c/fields/Salary_with_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Salary_with_Benefits__c</fullName>
    <formula>if ( ISPICKVAL( Benefits__c , &quot;Yes&quot;),  1.3 * Salary__c,  Salary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Adds 30% to salary if job has benefits.</inlineHelpText>
    <label>Salary with Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>