force-app/main/default/objects/Job_Order__c/fields/Seasonal_or_Variable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_or_Variable_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, &quot;Green&quot; Job Rating is reset to &quot;Yellow&quot;.</inlineHelpText>
    <label>Seasonal or Variable Hours</label>
    <type>Checkbox</type>
</CustomField>