force-app/main/default/objects/Job_Order__c/fields/Send_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Out_Date__c</fullName>
    <description>ECM job order process for TCP</description>
    <label>Send Out Date</label>
    <type>Date</type>
</CustomField>