force-app/main/default/objects/Job_Order__c/fields/Send_Out_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Send_Out_Eligible__c</fullName>
    <label>Send Out Eligible</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>On Send Out Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>