force-app/main/default/objects/Job_Order__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <inlineHelpText>If Rotating, choose all that apply.</inlineHelpText>
    <label>Shift</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First/Day</fullName>
            </value>
            <value>
                <fullName>Second/Evenings</fullName>
            </value>
            <value>
                <fullName>Third/Overnight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>