force-app/main/default/objects/Job_Order__c/fields/Special_Instructions_Insider_Info__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_Insider_Info__c</fullName>
    <label>Special Instructions &amp; Insider Info</label>
    <type>TextArea</type>
</CustomField>