force-app/main/default/objects/Job_Order__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <label>Deprecated - Job Order Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job Order Created</fullName>
                <default>true</default>
                <label>Job Order Created</label>
            </value>
            <value>
                <fullName>Job Order Shared</fullName>
            </value>
            <value>
                <fullName>Send Out</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed No Send Outs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>