force-app/main/default/objects/Job_Order__c/fields/Studentforce_Import_ID__c.field-meta.xml
<CustomField>
    <fullName>Studentforce_Import_ID__c</fullName>
    <externalId>true</externalId>
    <label>Studentforce Import ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>