force-app/main/default/objects/Job_Order__c/fields/Transportation_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Requirements__c</fullName>
    <label>Transportation Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>DL2</fullName>
            </value>
            <value>
                <fullName>Access to Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>