force-app/main/default/objects/Job_Order__c/fields/Wage__c.field-meta.xml
<CustomField>
    <fullName>Wage__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <inlineHelpText>Per hour</inlineHelpText>
    <label>Wage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>