force-app/main/default/objects/Job_Order__c/fields/zz_Visibility_Test__c.field-meta.xml
<CustomField>
    <fullName>zz_Visibility_Test__c</fullName>
    <label>zz Visibility Test</label>
    <length>200</length>
    <type>Text</type>
</CustomField>