force-app/main/default/objects/Job_Order__c/validationRules/Close_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Close_Date__c &lt;  Open_Date__c</errorConditionFormula>
    <errorMessage>Close Date should not be before Open Date. Please correct this field.</errorMessage>
</ValidationRule>