force-app/main/default/objects/Job_Order__c/validationRules/Habitat_Job_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Habitat_Job_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
DATEVALUE(CreatedDate) &gt;= DATE (2021,04,01),

Organization_ID__c = &apos;001i000000K8NLy&apos;,

TEXT( Employment_Source__c ) = &quot;Cara Connects&quot;
)</errorConditionFormula>
    <errorMessage>Please attach job order to the Individual site record via the Organization field. Please refer to the following link for reference to the possible site records:
Habitat: https://na151.salesforce.com/acc/account_hierarchy.jsp?id=001i000000K8NLy</errorMessage>
</ValidationRule>