force-app/main/default/objects/Job_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Organization__c</columns>
    <columns>Stage__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Job_Placement_Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Studentforce_Import_ID__c</columns>
    <columns>Legacy_Created_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Benefits__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Send Out</value>
    </filters>
    <filters>
        <field>Shift__c</field>
        <operation>equals</operation>
        <value>Third/Overnight</value>
    </filters>
    <filters>
        <field>Benefits__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>All</label>
</ListView>