force-app/main/default/objects/Job_Order__c/listViews/Habitat.listView-meta.xml
<ListView>
    <fullName>Habitat</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Organization__c</columns>
    <columns>Location__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Recommendations_Due_By__c</columns>
    <columns>Close_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Organization__c</field>
        <operation>contains</operation>
        <value>The Habitat Company</value>
    </filters>
    <label>Habitat</label>
    <language>en_US</language>
</ListView>