force-app/main/default/objects/Job_Order__c/listViews/High_Priority_Job_Order.listView-meta.xml
<ListView>
    <fullName>High_Priority_Job_Order</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Organization__c</columns>
    <columns>Location__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Recommendations_Due_By__c</columns>
    <columns>Close_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HighPriority__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>High Priority Job Orders</label>
</ListView>