force-app/main/default/objects/Job_Order__c/listViews/My_Job_Orders_All.listView-meta.xml
<ListView>
    <fullName>My_Job_Orders_All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Organization__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Recommendations_Due_By__c</columns>
    <columns>Close_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Job Orders, All</label>
    <language>en_US</language>
</ListView>