force-app/main/default/objects/Job_Order__c/listViews/Open_Habitat_Job_Orders_Connects.listView-meta.xml
<ListView>
    <fullName>Open_Habitat_Job_Orders_Connects</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Organization__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Recommendations_Due_By__c</columns>
    <columns>Close_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Job Order Created,Job Order Shared,Send Out</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>murray,simpson,corona,belville</value>
    </filters>
    <filters>
        <field>Organization__c</field>
        <operation>contains</operation>
        <value>the habitat company</value>
    </filters>
    <label>Open Habitat Job Orders - Connects</label>
    <language>en_US</language>
</ListView>