force-app/main/default/objects/Job_Order__c/listViews/Open_Job_Orders_Created_by_Connects.listView-meta.xml
<ListView>
    <fullName>Open_Job_Orders_Created_by_Connects</fullName>
    <columns>NAME</columns>
    <columns>Job_Order_Stage_Formula__c</columns>
    <columns>Organization__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Recommendations_Due_By__c</columns>
    <columns>Close_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>loeffler,simpson</value>
    </filters>
    <filters>
        <field>Job_Order_Stage_Formula__c</field>
        <operation>contains</operation>
        <value>created,shared</value>
    </filters>
    <label>Open Job Orders - Created by LS &amp; TL</label>
</ListView>