force-app/main/default/objects/Job_Order__c/listViews/Open_Job_Orders_with_Position_Vertical.listView-meta.xml
<ListView>
    <fullName>Open_Job_Orders_with_Position_Vertical</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>Position_Vertical__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Recommendations_Due_By__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Job Order Created,Job Order Shared,Send Out</value>
    </filters>
    <label>Open Job Orders with Position Vertical</label>
    <language>en_US</language>
</ListView>